update divs to semantic elements

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="qr-code-container">
+    <main class="qr-code-container">
       <img src="images/image-qr-code.png" class="qr-image" alt="QR code" />
       <div class="qr-text">
         <h1>Improve your front-end skills by building projects</h1>
@@ -28,13 +28,13 @@
           to the next level
         </p>
       </div>
-    </div>
+    </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Mario Ballesteros</a>.
-    </div>
+    </footer>
   </body>
 </html>
